--- a/UiComponent/onoffbutton/widget.ui
+++ b/UiComponent/onoffbutton/widget.ui
@@ -16,8 +16,26 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(255, 255, 255);</string>
   </property>
+  <widget class="OnOffButton" name="widget" native="true">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>210</y>
+     <width>81</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>OnOffButton</class>
+   <extends>QWidget</extends>
+   <header location="global">onoffbutton.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
